--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,10 @@
   <head>
     <title>url shortner</title>
     <link type="text/css" rel="stylesheet" href="{{url_for('static',filename='materialize.min.css')}}" />
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans|Thasadith" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <style type="text/css">
       #nav-mobile a{
@@ -54,14 +57,15 @@
        {%block style%}
        
        {%endblock style%}
-       <div class="page-footer grey darken-4">
+       <!-- <br><br><br><br>
+       <div  class="page-footer grey darken-4">
         <div class="footer-copyright">
             <div class="container">
             © 2014 Copyright Text
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
         </div>
-        </div>
+        </div> -->
 
           <!-- Initialization stuff -->
           <script type="text/javascript">
@@ -71,6 +75,7 @@
   });
           </script>
     <script type="text/javascript" src="{{url_for('static',filename='materialize.min.js')}}"></script>
+    
 
   </body>
 </html>
