--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {%block content%}
 <div class="container">
 	<div class="row">
-    		<h2 id="heading" class=" center-align">lets Trace linking <i class="material-icons">insert_link</i></h2>
+    		<h2 id="heading" class=" center-align">Trace a Link<i class="material-icons">insert_link</i></h2>
    	</div>
     <div class="row">
     		<h4 id="para" class="center-align"> paste your long URL here</h4>
@@ -20,10 +20,10 @@
  		 </button>
     </div>
     </form>
-
+    
     {%if data%}   
         <div id="result">
-            <h1>Here your Shortened URL</h1>
+            <h1>Here your tracking URL</h1>
             <h3 id="data" >{{data}} <a id="copy" onclick="copy()"
                  class="waves-effect waves-light btn"> <i class="material-icons left">
                         content_copy</i>Copy</a></h3> 
@@ -31,6 +31,7 @@
             
             
         </div>
+        <div style="hight:100px;"> <br> <br></div>
         <script>
             function copy() {
 
