--- a/templates/home.html
+++ b/templates/home.html
@@ -99,6 +99,9 @@
     color: black;
     font-weight: bold;
 }
+#lurl{
+    color: white;
+}
 @keyframes goup {
   from {bottom: 0px;}
   to {top: 30px;}
