--- a/templates/terms.html
+++ b/templates/terms.html
@@ -1,4 +1,4 @@
 {%extends 'layout.html'%}
 {%block content%}
-<center><h1>Terms</h1></center>
+<center><h1 style="color: white" >Terms</h1></center>
 {%endblock content%}
