--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
 {%extends 'layout.html'%}
 {%block content%}
-<center><h1>About</h1></center>
+<center><h1 style="color: white">About</h1></center>
 {%endblock content%}
