--- a/templates/feature.html
+++ b/templates/feature.html
@@ -1,5 +1,5 @@
 {%extends 'layout.html'%}
 {%block content%}
-<center><h1>Feature</h1></center>
+<center><h1 style="color: white" >Feature</h1></center>
 
 {%endblock content%}
