--- a/templates/stats.html
+++ b/templates/stats.html
@@ -11,6 +11,9 @@
 	
 	<p></p>
 </h1> -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.js"></script>
+<!-- PIE chart  -->
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
 	<center><h1>Statistics</h1></center>
 	<h3>Total Cliks: {{count}}</h3>
@@ -46,8 +49,57 @@
 
 <h1>Graph View:<center>
 	
-	<h4>Graph View on the Development</h4>
-</pcenter></h1>
+	<h3 style="color: red">Graph View on the Development stage [*]NOT[*] a Orginal value...</h3>
+<!-- Graph  -->
+
+
+
+<canvas id="myChart" width="400" height="200"></canvas>
+<script>
+var ctx = document.getElementById("myChart").getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+        datasets: [{
+            label: '# of Votes',
+            data: [12, 19, 3, 5, 2, 3],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255,99,132,1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        }
+    }
+});
+</script>
+
+
+
+
+</center></h1>
+
 <style type="text/css">
 	table{
 		border: solid white 3px;
