Added Clean howto page, bug fixes , input url pattern strict

--- a/templates/feature.html
+++ b/templates/feature.html
@@ -1,5 +1,5 @@
 {%extends 'layout.html'%}
 {%block content%}
-<center><h1 style="color: white" >Feature</h1></center>
+<center><h1 style="color: white" >Feature</h1><h2 style="color: white">comming soon</h2></center>
 
 {%endblock content%}
