--- a/templates/stats.html
+++ b/templates/stats.html
@@ -22,8 +22,8 @@
           <tr>
               <th class="pad5">Time</th>
               <th>Browser</th>
-              <th>Location</th>
-              <th>ISP</th>
+              <th>Location(update soon)</th>
+              <th>ISP(update soon)</th>
               <th>Platform</th>
           </tr>
         </thead>
@@ -49,12 +49,12 @@
 
 <h1>Graph View:<center>
 	
-	<h3 style="color: red">Graph View on the Development stage [*]NOT[*] a Orginal value...</h3>
+	<h3 style="color: red">On development stage comming soon....</h3>
 <!-- Graph  -->
 
 
 
-<canvas id="myChart" width="400" height="200"></canvas>
+<!-- <canvas id="myChart" width="400" height="200"></canvas>
 <script>
 var ctx = document.getElementById("myChart").getContext('2d');
 var myChart = new Chart(ctx, {
@@ -94,7 +94,7 @@ var myChart = new Chart(ctx, {
     }
 });
 </script>
-
+ -->
 
 
 
