--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,7 @@
 {%extends 'layout.html'%}
 {%block content%}
-<center><h1 style="color: white">About</h1></center>
+<center><h1 style="color: white">About</h1>
+
+<h2 style="color: white">comming soon</h2>
+</center>
 {%endblock content%}
